All dressed up for Heroku :)

--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "keywords": ["node", "express", "react", "redux", "mongodb"],
   "description": "My version of Stephen Grider's course Node with React: Fullstack Web Development (Udemy.com).​",
   "main": "index.js",
+  "engines": {
+    "node": "9.5.0",
+    "npm": "5.6.0",
+  },
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
