--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "engines": {
     "node": "9.5.0",
-    "npm": "5.6.0",
+    "npm": "5.6.0"
   },
   "scripts": {
     "start": "node server.js",
