--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "npm": "5.6.0"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
