--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "react-email",
   "version": "1.0.0",
   "keywords": ["node", "express", "react", "redux", "mongodb"],
-  "description": "My version of Stephen Grider's course Node with React: Fullstack Web Development (Udemy.com).​",
+  "description":
+    "My version of Stephen Grider's course Node with React: Fullstack Web Development (Udemy.com).​",
   "main": "index.js",
   "engines": {
     "node": "9.5.0",
@@ -10,6 +11,7 @@
   },
   "scripts": {
     "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,6 +25,13 @@
   },
   "homepage": "https://github.com/toth3max/node-react-email#readme",
   "dependencies": {
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "nodemon": "1.14.12",
+    "passport": "0.4.0",
+    "passport-google-oauth20": "1.0.0"
+  },
+  "prettier": {
+    "singleQuote": true,
+    "semi": false
   }
 }
